[package]
name = "merge_node_links_and_conf_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.11.24"
regex = "1.10.3"
base64 = "0.20"
serde_yaml = "0.9.31"
serde_json = "1.0.113"
chrono = "0.4.33"
rand = "0.8.5"

[[bin]]
name = "demo"
path = "test/demo.rs"

[[bin]]
name = "main"
path = "src/main.rs"