[package]
name = "merge_node_links_and_conf_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
reqwest = "0.12.5"
regex = "1.10.5"
base64 = "0.20"
serde_yaml = "0.9"
serde_json = "1.0"
chrono = "0.4"
rand = "0.8.5"

# [[bin]]
# name = "demo"
# path = "test/demo.rs"

# [[bin]]
# name = "main"
# path = "src/main.rs"